src/test/ui/simd-intrinsic/simd-intrinsic-declaration-type.stderr
error[E0442]: intrinsic argument 1 has wrong type: found `u32`, expected `i32`
  --> $DIR/simd-intrinsic-declaration-type.rs:35:9
   |
LL |         fn aarch64_vld2q_dup_s32(x: *const u32) -> (::u32x4, ::u32x4);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0442]: intrinsic return value has wrong type: found `u32`, expected `i32`
  --> $DIR/simd-intrinsic-declaration-type.rs:35:9
   |
LL |         fn aarch64_vld2q_dup_s32(x: *const u32) -> (::u32x4, ::u32x4);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0442]: intrinsic return value has wrong type: found vector with length 8, expected length 4
  --> $DIR/simd-intrinsic-declaration-type.rs:44:9
   |
LL |         fn aarch64_vld2q_dup_s32(x: *const i32) -> (::i32x8, ::i32x4);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0442]: intrinsic return value has wrong type: found `f32`, expected `i32`
  --> $DIR/simd-intrinsic-declaration-type.rs:53:9
   |
LL |         fn aarch64_vld2q_dup_s32(x: *const i32) -> (::f32x4, ::f32x4);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0442`.
